<resources>
    <string name="app_name">Github User (Nav&amp;API)</string>
    <string name="search">Search</string>
    <string name="nama">Nama</string>
    <string name="location">Location</string>
    <string name="descimage">descImage</string>
    <string name="username">username</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="name">name</string>
    <string name="company">company</string>
    <string name="avatar">avatar</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
</resources>